# llama.cpp

./: .gitignore  Makefile  README.md  conv-nllb.sh  convert.py  ggml-cuda.cu
cuew/: README.md  cuew.c  cuew.h  cuew_cublas.c  cuew_cublas.h  cuew_cudart.c  cuew_cudart.h
examples/: CMakeLists.txt
examples/nllb/: convert.py
examples/redpajama/: CMakeLists.txt  gptneox.cpp
examples/train-text-from-scratch/: train-text-from-scratch.cpp
